* Add new default styles for the calendar
Changes :
- Remove styles in index.html
- create a styles.css and move it to the root of the project (will be changed eventually)

--- a/index.html
+++ b/index.html
@@ -10,141 +10,8 @@
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<script type="text/javascript" src="scripts/jquery-1.11.1.min.js"></script>
 		<script type="text/javascript" src="scripts/calendar.js"></script>
-
-		<style>
-    <?php
-    /**
-    * CSS Only for display purpose
-    * Can be used without CSS, but that CSS makes it RESPONSIVE according to the CONTAINER
-    */
-    ?>
-    .calendar {
-      position: relative; }
-
-    .calendar__table {
-      width: 100%;
-      text-align: center; }
-
-    .calendar__title {
-      font-size: 24px;
-      font-weight: 500;
-      margin: 0;
-      padding-bottom: 20px; }
-      @media (max-width: 360px) {
-        .calendar__title {
-          font-size: 20px; } }
-
-    .calendar__header {
-      border-top: 1px solid #FFFFFF;
-      border-bottom: 1px solid #FFFFFF;
-      margin-bottom: 10px;
-      display: inline-block;
-      width: 100%; }
-      .calendar__header > .calendar__day {
-        padding-bottom: 0px;
-        font-weight: 500; }
-
-    .calendar__row {
-      display: inline-block;
-      width: 100%; }
-
-    .calendar__day {
-      font-family: "brandon-grotesque", sans-serif;
-      font-weight: 500;
-      font-size: 24px;
-      width: 14.28%;
-      position: relative;
-      padding-bottom: 14%;
-      display: inline-block;
-      font-size: 18px;
-      line-height: 45px; }
-      @media (min-width: 1680px) {
-        .calendar__day {
-          padding-bottom: 10%; } 
-      }
-
-    .calendar__month {
-      font-family: "brandon-grotesque", sans-serif;
-      font-weight: 500;
-      font-size: 24px;
-      width: 25%;
-      position: relative;
-      padding-bottom: 14%;
-      display: inline-block;
-      font-size: 18px;
-      line-height: 45px; }
-      @media (min-width: 1680px) {
-        .calendar__day {
-          padding-bottom: 10%; } 
-      }
-
-    .calendar__day--empty .calendar__link:hover .calendar__text {
-      background-color: #fcb833; }
-
-    .calendar__day--event .calendar__text:after {
-      content: "";
-      display: block;
-      width: 4px;
-      height: 4px;
-      border-radius: 100%;
-      position: absolute;
-      top: 11px;
-      right: 6px;
-      display: block;
-      background-color: #000000;
-      transition: background-color 0.3s cubic-bezier(0.23, 1, 0.32, 1); }
-
-    .calendar__link {
-      text-decoration: none;
-      position: absolute;
-      display: block;
-      width: 100%;
-      height: 100%;
-    }
-      .calendar__link:hover .calendar__text {
-        color: #fcb833; }
-        .calendar__link:hover .calendar__text:after {
-          background-color: #fcb833; }
-
-    .calendar__text {
-      position: absolute;
-      height: 45px;
-      width: 45px;
-      left: 50%;
-      margin-left: -22.5px;
-      top: 50%;
-      margin-top: -22.5px;
-      border-radius: 100%;
-      transition: background-color 0.3s cubic-bezier(0.23, 1, 0.32, 1), color 0.3s cubic-bezier(0.23, 1, 0.32, 1); }
-
-    .calendar__prev {
-      position: absolute;
-      right: 43px;
-      top: 0px;
-      background: black;
-
-    }
-
-    .calendar__next {
-      position: absolute;
-      right: 0px;
-      top: 0px;
-      background: black;
-
-    }
-
-    .calendar__next, .calendar__prev {
-      width: 17px;
-      height: 17px;
-      display: block; }
-
-    .calendar__svg {
-      width: 17px;
-      height: 17px;
-      fill: #FFFFFF; }
-		</style>
-
-	</head>
+  <link rel="stylesheet" href="styles.css">
+  </head>
 
 	<body>
     <div class="calendar-widget" style="width: 500px; float: left; position: relative;">
