Allow month view defaults updated when view is set to month. Doc accordingly

--- a/calendar-example.html
+++ b/calendar-example.html
@@ -64,6 +64,7 @@
       });
 			$('.calendar-widget--second').calendar({
 				lang: 'fr',
+        allow_month_view : true,
 				events : [
 					{
 						date:"2015/01/16",
