Newlines, indents, minors fixes

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <!--[if IE 9]>    <html class="no-js ie9"  xmlns:fb="http://ogp.me/ns/fb#" lang="en"> <![endif]-->
 <!--[if gt IE 9]><!--> <html class="gt-ie"  xmlns:fb="http://ogp.me/ns/fb#"> <!--<![endif]-->
 
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<script type="text/javascript" src="scripts/jquery-1.11.1.min.js"></script>
-		<script type="text/javascript" src="scripts/calendar.js"></script>
-  <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <script type="text/javascript" src="libs/jquery/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="src/calendar.js"></script>
+  <link rel="stylesheet" href="styles/styles.css">
   </head>
 
-	<body>
+  <body>
     <div class="calendar-widget" style="width: 500px; float: left; position: relative;">
 
     </div>
@@ -23,21 +23,21 @@
     <div class="event-infos">
 
     </div>
-	</body>
+  </body>
 
-	<script>
-		/**
-		*	#Calendar example
-		*
-		*	@param {object} opts
-		*	- Event Title
-		*	- Event date (multi format : "2012/11/6", 1349094647000, etc. (whatever gets in new Date())
-		*	- Event Content
-		*	- Event Link
-		*
-		*	Return this (Calendar object)
-		*/
-		$(document).ready(function() {
+  <script>
+    /**
+    * #Calendar example
+    *
+    * @param {object} opts
+    * - Event Title
+    * - Event date (multi format : "2012/11/6", 1349094647000, etc. (whatever gets in new Date())
+    * - Event Content
+    * - Event Link
+    *
+    * Return this (Calendar object)
+    */
+    $(document).ready(function() {
       $('.calendar-widget').calendar({
         lang: 'fr',
         mode: 'month',
@@ -62,31 +62,31 @@
           }
         ]
       });
-			$('.calendar-widget--second').calendar({
-				lang: 'fr',
-				events : [
-					{
-						date:"2015/01/16",
-						title: 'Test title',
-						content : 'Well, turns out on that date we uploaded the plugin'
-					},
-					{
-						date:{
+      $('.calendar-widget--second').calendar({
+        lang: 'fr',
+        events : [
+          {
+            date:"2015/01/16",
+            title: 'Test title',
+            content : 'Well, turns out on that date we uploaded the plugin'
+          },
+          {
+            date:{
             start: "2015/01/16",
             end: "february 1 2015"
             },
-						title: 'Doc title',
-						content : 'We also u"<>pdated the doc accordingly'
-					},
-					{
-						date:{
-							start : "2015/01/17",
-							end : "2015/01/27"
-						},
-						title: 'Changes',
-						content : 'We might add s\0ome changes during theses days'
-					}
-				],
+            title: 'Doc title',
+            content : 'We also u"<>pdated the doc accordingly'
+          },
+          {
+            date:{
+              start : "2015/01/17",
+              end : "2015/01/27"
+            },
+            title: 'Changes',
+            content : 'We might add s\0ome changes during theses days'
+          }
+        ],
         callbacks: {
           onEventClick: function(ev,calendar) {
             console.log(ev);
@@ -102,13 +102,13 @@
             $('.event-infos').html(html);
           }
         }
-			});
-		});
+      });
+    });
 
-	</script>
+  </script>
 
-	<footer>
+  <footer>
 
-	</footer>
+  </footer>
 
 </html>
